[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Hiroyuki Takakura <hiroyuki.takakura11@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/HiroyukiTakakura/hello-wasm"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"